--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,13 @@
+body {
+    padding: 0px;
+    margin: 0px;
+    font-size: 28px;
+}
 .library-container {
     display: grid;
+    padding: 2rem;
+    gap: 75px;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
 }
 
 .library-container > div {
@@ -7,4 +15,29 @@
     height: 200px;
     border: 1px solid black;
     border-radius: 5px;
+    background-color: #2a2a2a;
+    color: #e6e6e6;
+    padding: 2rem;
+}
+
+.container {
+    background-color: #121212;
+    display: grid;
+    grid-template-columns: 0.2fr 1fr;
+}
+
+.sidebar {
+    background-color: #1f1f1f;
+    color: #f0f0f0;
+    height: 100vh;
+}
+
+button {
+  background-color: #3a3a3a;
+  color: #ffffff; 
+  font-size: 25px;
+  padding: 10px;
+  border-radius: 10px;
+  display: block;
+  margin: 5rem auto;
 }
