--- a/styles.css
+++ b/styles.css
@@ -44,3 +44,77 @@ button {
   max-width: 80%;
 }
 
+/* form styling */
+dialog::backdrop {
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+dialog {
+  border: none;
+  border-radius: 10px;
+  padding: 2rem;
+  background-color: #2a2a2a;
+  color: #e6e6e6;
+  max-width: 400px;
+  width: 90%;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+form label {
+  margin-bottom: 0.2rem;
+  margin-top: 0.8rem;
+}
+
+form input[type="text"],
+form input[type="number"] {
+  padding: 0.6rem;
+  background-color: #1f1f1f;
+  color: #ffffff;
+  border: 1px solid #444;
+  border-radius: 5px;
+  font-size: 1.5rem;
+}
+
+form input[type="checkbox"] {
+  margin-top: 0.8rem;
+  width: 1.2rem;
+  height: 1.2rem;
+  accent-color: #3a3a3a;
+}
+
+form button {
+  font-size: 1.5rem;
+  background-color: #3a3a3a;
+  color: #ffffff;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+form button:hover {
+  background-color: #5a5a5a;
+}
+
+form .checkbox-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+#buttons {
+    display: flex;
+    justify-content: space-between;
+    row-gap: 1rem;
+}
+
+#buttons button {
+    margin: 0.7rem 0.8rem;
+    padding: 0.75rem 1rem;
+    flex: 1;
+    font-size: 1.2rem;
+}
