--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
 
 .library-container > div {
     width: 200px;
-    height: 200px;
+    height: 300px;
     border: 1px solid black;
     border-radius: 5px;
     background-color: #2a2a2a;
@@ -123,7 +123,7 @@ form .checkbox-wrapper {
     text-align: center;
 }
 
-.remove-book {
+.remove-book, .toggle-read {
     margin-top: 1.5rem;
     padding: 0.5rem 1rem;
     font-size: 1.2rem;
